# sharpness

./: .gitignore  README.md  environment.yml  environmentv2.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
data/: kh_gremlin.tar
data/GraphCast_GFS/Large_images/: gfs_2023071712_f048_flashflood.nc  gfs_2023082912_f024_idalia.nc  gfs_2024012912_f168_atmosriver.nc  grap_2023071712_f048_flashflood.nc  grap_2023082912_f024_idalia.nc  grap_2024012912_f168_atmosriver.nc
data/GraphCast_GFS/Small_images/: gfs_2023071712_f048_flashflood.nc  gfs_2023082912_f024_idalia.nc  gfs_2024012912_f168_atmosriver.nc  grap_2023071712_f048_flashflood.nc  (+2 more)
notebooks/: README.md  art_imagehash_example.ipynb  experiment_demo.ipynb  experiments_imme_v2.ipynb  hologram_propagation.ipynb  s1_map_demo.ipynb  spectral_slope_validation.ipynb  vanGogh_example.ipynb
plotting/: README.md
src/: __init__.py  benchmark.py  dataloader.py  exp_utilities.py  fourier.py  gradient.py  heatmap.py  metric_list.py  metrics.py  spec_slope.py  transforms.py  wavelet.py  wavelet_metric_and_output.py  wavelet_metric_testing.py  wavelet_visualization_tools.py
src/sharpness/: __init__.py  benchmark.py  exp_utilities.py  fourier.py  gradient.py  heatmap.py  high_level_functions.py  metric_list.py  metrics.py  spec_slope.py  standard_metrics.py  transforms.py  wavelet.py  wavelet_metric_and_output.py  wavelet_metric_testing.py  wavelet_visualization_tools.py
tests/: test_fourier.py  test_gradient.py  test_metrics.py  test_spec_slope.py  test_standard_metrics.py  test_wavelet.py
